# llm-inference

./: .gitignore  CLAUDE.md  Makefile  README.md  TASKS.md  assets  config.h  main.cpp  main.py  pyproject.toml
include/: bf16.h  device_buffer.h  loader.h  model.h
kernel/: bf16_to_fp32.cu  embed_gather.cu  gqa.cu  kernels.cuh  matmul.cu  matmul_xwt.cu  residual_add.cu  rmsnorm.cu  rope.cu  silu_mul.cu
src/: loader.cpp  model.cpp  tokenizer_bpe.cpp
tests/: my_tests.cpp  test.cpp  test_api.cpp  test_api.h
tools/: dumper.py  reference_generate.py  sync_to_netscratch.sh
